[Up] 更新 mermaid项目配置 JiaHaoFang/JiaHaoFang.github.io@d650b3f2544c812cdfd7886efe972ee811cbeaf6

--- a/notion-example/index.html
+++ b/notion-example/index.html
@@ -384,7 +384,9 @@
 <ul>
 <li>[ ] 右侧书写</li>
 </ul>
-<figure class="highlight plaintext"><table><tr><td class="gutter"><pre><span class="line">1</span><br><span class="line">2</span><br><span class="line">3</span><br></pre></td><td class="code"><pre><span class="line">graph LR;</span><br><span class="line">Mermaid思维导图--&gt;思维导图</span><br><span class="line">Mermaid思维导图--&gt;研发</span><br></pre></td></tr></table></figure>
+<pre class="mermaid">graph LR;
+Mermaid思维导图-->思维导图
+Mermaid思维导图-->研发</pre>
 <p>@Anonymous</p>
 <p><a target="_blank" rel="noopener" href="https://www.notion.so/f478ef37c82a41f1b7a59c195b043831">Untitled</a></p>
 <p>2023-04-26</p>
@@ -474,7 +476,7 @@
 <script src="/js/third-party/search/local-search.js"></script>
 
 
-  <script class="next-config" data-name="mermaid" type="application/json">{"enable":true,"theme":"dark","js":{"url":"https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.7.0/mermaid.min.js","integrity":"sha256-TtLOdUA8mstPoO6sGvHIGx2ceXrrX4KgIItO06XOn8A="}}</script>
+  <script class="next-config" data-name="mermaid" type="application/json">{"enable":true,"theme":"default","cdn":"//cdn.jsdelivr.net/npm/mermaid@8/dist/mermaid.min.js","js":{"url":"https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.7.0/mermaid.min.js","integrity":"sha256-TtLOdUA8mstPoO6sGvHIGx2ceXrrX4KgIItO06XOn8A="}}</script>
   <script src="/js/third-party/tags/mermaid.js"></script>
 
 
